# analyser

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .env.example  .gitignore  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: analysis.py  files.py  tasks.py
backend/app/core/: config.py  database.py  prompts.py
backend/app/models/: base.py  task.py
backend/app/services/: agent_service.py  file_analyzer.py  file_service.py  llm_service.py  sandbox_service.py
backend/scripts/: create_tables.py  test_db.py
frontend/: Dockerfile.prod  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: analyser.ts
frontend/src/components/: AnalysisResult.tsx  ChartRenderer.tsx  ChatMessage.tsx  CodeBlock.tsx  FileDropzone.tsx  FileUpload.tsx  MetricCard.tsx  Sidebar.tsx
frontend/src/types/: index.ts
